overflow-solved

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-* ,*:before,*:after{box-sizing:inherit;
+* ,*:before,*:after{
+    box-sizing:inherit;
+    box-sizing: border-box;
 }
-
 body{
-    font-family: apercu-pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    font-family:  apercu-pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;;
     background-color: #191919;
     margin: 0px;
 }
@@ -26,8 +27,17 @@ header{
     text-decoration: none;
     color: #000000;
 }
+.svg1{
+    width: 33;
+    height: 22;
+}
+.svg2{
+    position: absolute;
+    overflow: hidden;
+}
 .svg2:hover{
-    transition: all 2s;
+    transition: all 1.5s;
+    transform: translatex(-100%);
 }
 .nav-content{
     display: flex;
@@ -53,7 +63,6 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: none;
     list-style-type: none;
 }
 .ul-menu button{
@@ -69,7 +78,6 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-
 .login .a1{
     text-decoration: none;
     color: #000000;
@@ -93,32 +101,52 @@ header{
     position: sticky;
     top: 0px;
   }
+  article{
+    display: block;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+    color: #000000;
+    border-bottom-left-radius: 90px;
+    border-bottom-right-radius: 90px;
+}
+.sec1{
+    margin-top: 40px;
+}
   .btn3{
+    padding-top: 12px;
+    padding-bottom: 12px;
     padding-left:45px;
     padding-right: 45px;
   }
-
+  h1{
+    font-size: 74px;
+    line-height: 1.1;
+  }
 h1 , h3{
     font-weight: normal;
     text-rendering: optimizespeed;
+}
+.vid1{
+    padding-right: 0px;
+}
+.content{
+    padding-right: 180px;
 }
 
 h2{
     font-weight: normal;
    text-align: center;
-   padding-bottom: 80px;
+   padding-bottom: 40px;
 }
 
 .sec1 , .sec4 , .sec5{ 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
-    
+    align-items: center;
 }
-
-.sec1{
-    margin-top: 40px;
+.vid2{
+    padding-right: 100px;
 }
 
 .banner{
@@ -133,64 +161,60 @@ h2{
 .log2{
     padding: 40px;
 }
-
 .logos {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
-
 .d4{
     padding-left: 80px;
 }
-
 .d5{
     padding-right: 80px;
 }
-
 .sec5{
     margin-top: 200px;
+    margin-bottom: 200px;
 }
-
 .sec6{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin-top: 200px;
-    margin-bottom: 170px;
-
+    justify-content: center;
+    align-items: normal;
+    padding-bottom: 120px;
+    padding-right: 100px;
 }
-.sec6 h4{
-    font-weight: none ;
+.box-description{
+    width: 278px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
 }
-
-.zapier , .calendly , .hubspot , .notion{
-    display: block;
-    text-decoration: none;
-    padding: 0.5rem;
-    border: 1px solid #F7F7F6;
-    background-color: #F7F7F6;
+.box-description a{
+    text-decoration-line: underline;
     color: #000000;
-    display: inline-block;
-    border-radius: 30px;
-    margin: 20px;
 }
-.notion{
-    padding-left: 40px;
-    padding-right: 40px;
+.box-description h4{
+    font-weight: none ;
+    font-weight: normal;
 }
-.hubspot{
-    padding: 25px;
+.list-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
-.calendly{
-    padding: 30px;
+.box{
+    width: 216px;
+    height: 216px;
+    background-color: #F7F7F6;
+    border: 2px solid #F7F7F6;
+    border-radius: 40px;
+    padding: 24px;
+    margin-right: 40px;
 }
-.zapier{
-    padding-top: 70px;
-    padding-bottom: 70px;
+.box img{
+    width: 100%;
 }
-
 .d7{
     display: flex;
     flex-direction: column;
@@ -198,38 +222,29 @@ h2{
     line-height: 1px;
     padding-bottom: 80px;
 }
-
 .sec8{
     display: flex;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
-    max-width: 1080px;
-    padding-left: 150px;
-    padding-right: 50px;
+    padding: 0 20px;
 }
 .card{
     display: block;
-    text-decoration: none;
-    width: 26%;
-    padding: 24px;
-    border: 1px solid #F7F7F6;
+    width: 30%;
+    padding: 20px;
     background-color: #F7F7F6;
-    color: #000000;
-    display: inline-block;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    border-radius: 24px;
+    margin-bottom: 24px;
 }
 .card a{
     display: block;
     text-decoration: none;
     color: #000000;
     margin: 3px;
+    font-size: 20px;
 }
 .card .card-title{
-    font-size: 18px;
+    font-size: 24px;
     padding-bottom: 5px;
 }
 .card:hover{
@@ -240,7 +255,7 @@ h2{
     color: #ffffff;
 }
 .card:hover svg{
-    color: #ffffff;
+    fill: #ffffff;
 }
 .card-links {
     display: flex;
@@ -249,14 +264,14 @@ h2{
 .card-links a:hover{
     text-decoration: underline;
 }
-
-.Browse{
+.sec9{
+    padding-top: 50px;
+    padding-bottom: 120px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 60px;
-    text-decoration-line: underline;
+    flex-direction: row;
+    justify-content: center;
+}
+.sec9 a{
     color: #000000;
 }
 .sec10{
@@ -307,21 +322,6 @@ h2{
 .p10{
     box-sizing: border-box;
     line-height: 28px;
-}
-
-article{
-    display: block;
-    text-decoration: none;
-    padding-top: 30px;
-    padding-left: 60px;
-    padding-bottom: 30px;
-    padding-right: 170px;
-    border: 1px solid #ffffff;
-    background-color: #ffffff;
-    color: #000000;
-    display: inline-block;
-    border-bottom-left-radius: 90px;
-    border-bottom-right-radius: 90px;
 }
 
 .sec011{
@@ -385,13 +385,12 @@ ul {
 }
 .sec012{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: top;
-    flex-wrap: wrap;
-    max-width: 1180px;
-    padding-left: 150px;
+    padding-left: 100px;
+    padding-right: 100px;
     color: #ffffff;
-    margin-bottom: 88px;
+    padding-bottom: 88px;
 }
 .sec012 a{
     text-decoration: none;
@@ -451,10 +450,21 @@ ul {
     align-items: center;
     justify-content: space-between;
 }
+.location{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.location svg{
+    color: #ffffff;
+}
 .ftrlnk{
     color: #ffffff;
 }
 .ftrlnk:hover{
+    color: #939393;
+}
+.ftrlnk:hover button{
     color: #939393;
 }
 /*Line code is hr*/
@@ -469,6 +479,4 @@ hr{
     color: #ffffff;
     margin: 10px;
 }
-.ftrlnk svg{
-    color: #ffffff;
-}
+
